Analytics Fix remove the top items when on mobile Fix the learn more redirect

--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -38,8 +38,14 @@
                     justify-content: flex-end;
                     > li {
                         padding-left: $gutter-md;
-                        display: flex;
+                        display: none;
                         justify-content: center;
+                        @media (min-width: $breakpoint-lg) {
+                            display: flex;
+                        }
+                        &.important-item {
+                            display: flex;
+                        }
                         a {
                             &:hover {
                                 text-decoration: underline;
